Got the graphs to display nicely. Now I just need to add column scaling and fix the issue where the bottom of the page is cut off a little bit for some reason.

--- a/src/app/components/graph/graph.component.css
+++ b/src/app/components/graph/graph.component.css
@@ -5,12 +5,3 @@
 .dark-theme line {
   stroke: #5e5e5e !important;
 }
-
-.example-card {
-  width: 400px;
-}
-
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
-}
