--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,10 +1,8 @@
-.container {
-  display: flex;
-  flex-direction: column;
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
 }
 
-.item {
-  margin: 20px;
+.card-style {
+  width: 100%;
 }
-
-
